# fj-ai

./: .gitignore  Makefile  README.md  nano.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: completion-design.md
src/fj_ai/: __init__.py  __main__.py  agent.py  argv.py  cli.py  config.py  errors.py  logging_setup.py  progress.py  setup_cmd.py  skills.py  stream.py  threads.py  tool_stream.py
src/fj_ai/builtin_skills/: README.md
src/fj_ai/builtin_skills/docx/scripts/: comment.py  merge_runs.py
src/fj_ai/builtin_skills/docx/scripts/office/: soffice.py
src/fj_ai/builtin_skills/docx/scripts/office/helpers/: pptx_chart.py
src/fj_ai/builtin_skills/docx/scripts/office/validators/: pptx.py  redlining.py
src/fj_ai/builtin_skills/pdf/scripts/: check_bounding_boxes.py
src/fj_ai/builtin_skills/pptx/scripts/: add_slide.py  clean.py  thumbnail.py
src/fj_ai/builtin_skills/pptx/scripts/office/helpers/: __init__.py  pptx_slide.py  pptx_theme.py
src/fj_ai/builtin_skills/pptx/scripts/office/validators/: docx.py
src/fj_ai/builtin_skills/xlsx/scripts/: recalc.py
src/fj_ai/builtin_skills/xlsx/scripts/office/validators/: base.py
src/fj_ai/completion/: __init__.py  cmd.py  context.py  engine.py  history.py  llm.py  static.py
src/fj_ai/shell/: _fj.zsh  fj.bash
tests/integration/: conftest.py  test_cli_arg_composition.py  test_cli_fjf.py  test_cli_stream_progress.py
tests/unit/: test_agent.py  test_cli.py  test_completion.py  test_config.py  test_errors.py  test_logging_setup.py  test_progress.py  test_setup_cmd.py  test_skills.py  test_stream.py  test_threads.py  test_tool_stream.py
