[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fj-ai"
version = "1.0.2"
description = "fj — one-shot CLI coding agent powered by soothe-nano"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.15"
authors = [{ name = "Xiaming Chen" }]
keywords = ["fj", "cli", "agent", "soothe", "nano", "ai", "coding-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "soothe-nano>=0.9.5,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov",
    "ruff>=0.12.0",
    "mypy>=1.0.0",
    "twine>=5.0.0",
]

[dependency-groups]
dev = [
    "fj-ai[dev]",
]

[tool.uv]
default-groups = ["dev"]

[project.scripts]
fj = "fj_ai.cli:main"

[project.urls]
Homepage = "https://github.com/caesar0301/fj-ai"
Repository = "https://github.com/caesar0301/fj-ai"
Issues = "https://github.com/caesar0301/fj-ai/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/fj_ai"]

[tool.hatch.build.targets.sdist]
include = ["src/fj_ai/", "nano.yml", "README.md", "LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "asyncio: mark test as async",
    "integration: mark test as integration test",
]
