[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fj-ai"
version = "1.0.5"
description = "fj — one-shot CLI coding agent powered by soothe-nano"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.15"
authors = [{ name = "Xiaming Chen" }]
keywords = ["fj", "cli", "agent", "soothe", "nano", "ai", "coding-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "soothe-nano>=0.9.9,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov",
    "ruff>=0.12.0",
    "mypy>=1.0.0",
    "twine>=5.0.0",
]

[dependency-groups]
dev = [
    "fj-ai[dev]",
]

[tool.uv]
default-groups = ["dev"]
# cryptography 46+ ships macOS wheels for arm64 only; Intel Macs must build from
# source (Rust), which is slow and looks like a hang during `uv sync`.
constraint-dependencies = [
    "cryptography>=45,<46; platform_machine == 'x86_64' and sys_platform == 'darwin'",
]

# Local monorepo: sibling soothe checkout. Remove before publishing fj when
# soothe-nano 0.9.9+ is on PyPI.
[tool.uv.sources]
soothe-nano = { path = "../soothe/packages/soothe-nano", editable = true }

[project.scripts]
fj = "fj_ai.cli:main"

[project.urls]
Homepage = "https://github.com/caesar0301/fj-ai"
Repository = "https://github.com/caesar0301/fj-ai"
Issues = "https://github.com/caesar0301/fj-ai/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/fj_ai"]

[tool.hatch.build.targets.sdist]
include = ["src/fj_ai/", "nano.yml", "README.md", "LICENSE", "docs/completion-design.md"]

# Ensure non-Python shell completion scripts and builtin skills ship in the wheel.
[tool.hatch.build.targets.wheel.force-include]
"src/fj_ai/shell/_fj.zsh" = "fj_ai/shell/_fj.zsh"
"src/fj_ai/shell/fj.bash" = "fj_ai/shell/fj.bash"
"src/fj_ai/builtin_skills" = "fj_ai/builtin_skills"

[tool.ruff]
line-length = 100
target-version = "py311"
# AgentSkills scripts are third-party / skill-local style; keep them out of package lint.
extend-exclude = ["src/fj_ai/builtin_skills"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "asyncio: mark test as async",
    "integration: mark test as integration test",
]
